Fix some Java 9 deprecations